# ta2-table-understanding

./: .env.template  .gitignore  CLAUDE.md  Dockerfile  README.md  config.sand.yml  docker-compose.yml  geochem.sand.yml  minmod.dockerfile  minmod.sand.yml  pyproject.toml
ansible/: debian.yml
containers/nginx/: nginx.conf
containers/sand/: Dockerfile
data/: .gitignore  README.md  units_and_commodities.json
data/gpp/: epoch=5-step=4728.ckpt
data/known_models/descriptions/: s01-country.yml  s02-deposit-type.yml  s03b-empired-state-mine-resource-estimate.yml  s04-mineral-site.yml  s05-deposit-type.yml  s06-mt-ore.yml  s07-company-source.yml  s09-grade-ni.yml  t01-country.yml  t02-mineral-site.yml  t03a-ore-grade.yml  t03b-ore-grade.yml
data/known_models/tables/: s02-deposit-type.csv  s03a-empired-state-mine-resource-estimate.csv  s04-mineral-site.csv  s05-deposit-type.csv  s06-mt-ore.csv  s07-company-source.csv  s08-grade-ni.csv  s09-grade-ni.csv  t01-country.csv  t02-mineral-site.csv  t03b-ore-grade.csv
data/meta_property/: data.csv  model.yml
data/minmod/: units_and_commodities.json
data/minmod/gpp/: params.json
data/tmp/: Mudd-and-Jowitt-2022-Nickel-Without-source.csv  Mudd-and-Jowitt-2022-Nickel.csv  norm.py  s03a-empired-state-mine-resource-estimate.yml  simon_2017_zinc_db.xlsx  simon_2017_zinc_db_crop.csv  simon_2017_zinc_db_crop.xlsx  simon_2017_zinc_db_crop.yml
data/tmp/copper/: format.py
data/tmp/nickel/: Mudd-and-Jowitt-2022-Nickel.xlsx  format.py
docs/: tutorial.ipynb
docs/examples/: .gitignore
docs/examples/copper/: dag.py  (+1 more)
examples/: demo.ipynb  demo.py  eval.ipynb  eval.py  extract.sh
examples/descriptions/: Mudd-and-Jowitt-2022-Nickel.yml
examples/dreprs/: Mudd-and-Jowitt-2017-Zinc.yml  Mudd-and-Jowitt-2018-Copper.yml  Mudd-and-Jowitt-2022-Nickel.yml
examples/programs/: Mudd-and-Jowitt-2022-Nickel.py
examples/tables/: Mudd-and-Jowitt-2017-Zinc.csv  Mudd-and-Jowitt-2022-Nickel.csv  Tungsten.csv  simon_2017_zinc_db.xlsx
examples/ttls/: Mudd-and-Jowitt-2022-Nickel.ttl
schema/: geochem.ttl  geochem_v1.0.shacl.ttl  geochem_v1.0.ttl  geochem_v1.0_diagram.dot  geochem_vs_minmod.md  mos.ttl  mos_v3.ttl
schema/deprecated/: mos.ttl  mos_v2.ttl
scripts/: build_docker.sh  dev.ipynb  geochem.env  setup_dev_env.sh
tbd/examples/: demo.ipynb  eval.py
tmp/: Graphite.json  TestGraphite.json
tum/: config.py  dag.py  db.py  make_db.py  map_mos.py  misc.py  namespace.py
tum/actors/: __main__.py  data.py  db.py  drepr.py  entry.py  main.py  mos.py  semanticmodel.py  semanticmodel_v1.py
tum/integrations/: drepr.py  sand.py
tum/lib/: cgraph.py  entity_linking.py  graph_generation.py  postprocessing.py  steiner_tree.py  tablereg.py  unit_and_commodity.py
tum/preprocessing/: __main__.py  base.py  extract_table.py  join_table.py  norm_table.py
(+218 files in other folders)
