[project]
name = "tum"
version = "1.0.6"
description = "TA2 Table Understanding"
authors = [{ name = "Binh Vu", email = "bvu687@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<3.20"

dependencies = [
    "sem-desc>=6.19.1,<7.0.0",
    "serde2>=1.9.1,<2.0.0",
    "kgdata>=7.0.12,<8.0.0",
    "drepr-v2>=1.6.5,<2.0.0",
    "steiner-tree>=1.2.2,<2.0.0",
    "dsl2>=1.3.5,<2.0.0",
    "rltk>=2.0.0a20,<3.0.0",
    "minmodkg>=2.7.1,<3.0.0",
    "minmodapi>=1.3.2,<2.0.0",
    "pyspark>=3.5.2,<4.0.0",
    "ray>=2.34.0,<3.0.0",
    "strsim-2>=1.1.2,<2.0.0",
    "symspellpy>=6.7.7,<7.0.0",
    "azure-ai-formrecognizer>=3.3.3,<4.0.0",
    "azure-core>=1.32.0,<2.0.0",
    "pypdf2>=3.0.1,<4.0.0",
    "duneflow>=1.0.1,<2.0.0",
    "gramsplus-2>=6.0.0,<7.0.0",
    "smml>=1.0.2,<2.0.0",
    "gramsplusplus>=1.0.4,<2.0.0",
    "openai>=1.76.2,<2.0.0",
    "hugedict>=2.14.6,<3.0.0",
]

[project.optional-dependencies]
dev = ["ipykernel>=6.27.1,<7.0.0"]

[dependency-groups]
sand = ["sand-drepr>=1.0.4", "web-sand>=4.3.0"]

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "tum"
module-root = ""
